Fixed : - Mapper component model to generate Spring annotated implementation - FrontEnd javascript for API calls & data interpolation

--- a/src/main/resources/static/accounts.html
+++ b/src/main/resources/static/accounts.html
@@ -59,10 +59,10 @@
                     'Content-Type': 'application/json'
                 },
                 success: function (data) {
-                    if (status == 200) {
-                        $("#response").innerText = "New account created";
+                    if (status === "success") {
+                        $("#response").text("New account created");
                     } else {
-                        $("#response").innerText = "There was an error creating a new account for the specified customer";
+                        $("#response").text("There was an error creating a new account for the specified customer");
                     }
                 }
             });
