--- a/src/main/resources/static/customers.html
+++ b/src/main/resources/static/customers.html
@@ -67,10 +67,10 @@
             $("#search_result").show();
             customerId = document.getElementById("customer_id").value;
             $.get("/customers/"+customerId, function(data, status) {
-                if (status == 200) {
-                    $("#name").innerText = data.name;
-                    $("#surname").innerText = data.surName;
-                    $("#balance").innerText = data.balance;
+                if (status === "success") {
+                    $("#name").text(data.name);
+                    $("#surname").text(data.surname);
+                    $("#balance").text(data.balance);
 
                     for (account in data.accounts) {
                         for (transaction in account.transactions) {
