--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -19,6 +19,7 @@
             <li class="active" ><a href="homepage.html">Home</a></li>
             <li><a href="customers.html">Customers</a></li>
             <li><a href="accounts.html">Accounts</a></li>
+            <li><a href="db_lookup.html">DB Lookup</a></li>
         </ul>
     </div>
 </nav>
