--- a/src/main/resources/static/accounts.html
+++ b/src/main/resources/static/accounts.html
@@ -22,6 +22,7 @@
             <li><a href="homepage.html">Home</a></li>
             <li><a href="customers.html">Customers</a></li>
             <li class="active"><a href="accounts.html">Accounts</a></li>
+            <li><a href="db_lookup.html">DB Lookup</a></li>
         </ul>
     </div>
 </nav>
