Added DetailedAccount & DetailedTransaction DTOs so the DB lookup page can show information on customers inside the accounts table and information on transactions inside the transactions table

--- a/src/main/resources/static/db_lookup.html
+++ b/src/main/resources/static/db_lookup.html
@@ -109,7 +109,7 @@
                         let newRow;
                         newRow = '<tr>' +
                             '<td>' + account.id + '</td>' +
-                            '<td>' + account.customer.id + '</td>' +
+                            '<td>' + account.customer.name +' ' +account.customer.surname + '</td>' +
                             '<td>' + account.balance + '</td>' + '</tr>';
                         $('#accounts_table tr:last').after(newRow);
                     }
